Fix image overflow in item box

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -410,6 +410,7 @@ ul {
 #hoverarea {
   width: 100%;
   height: 15rem;
+  overflow: hidden;
 }
 
 #hoverarea img {
